--- a/sass/base/typo.scss
+++ b/sass/base/typo.scss
@@ -22,7 +22,7 @@ h1{
     font-size: 36px;
 
      @media (max-width: $breakpoint-minMobile) {
-        font-size: 14px;
+        font-size: 13px;
     }
 }
 
