--- a/sass/components/selectMenu.scss
+++ b/sass/components/selectMenu.scss
@@ -20,7 +20,7 @@
       background-color: $color-primaryFilled-background;
       color: $color-primaryFilled-text;
       width: 170px;
-      height: 55px; 
+      height: 40px; 
       padding-left: 15px;
       font-size: 18px;
     }
