--- a/sass/pages/photographPages.scss
+++ b/sass/pages/photographPages.scss
@@ -89,10 +89,12 @@
 
         @media (max-width: $breakpoint-minTablet) {
             position: fixed;
-            bottom: 30px;
+            bottom: 5px;
             left: calc(50% - 85px);
             width: 170px;
             font-size: 18px;
+            padding: 14px;
+            max-height: 50px;
         }
     }
 
